completed Docker build
